--- a/ApplicationDev/appsettings.json
+++ b/ApplicationDev/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "DataSource=app.db;Cache=Shared"
+    "DefaultConnection": "Server=localhost,1436;Database=FPTShop;User=sa;Password=Password@123;TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
