AppDev-004: Role Manager

--- a/ApplicationDev/appsettings.json
+++ b/ApplicationDev/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost,1436;Database=FPTShop;User=sa;Password=Password@123;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=localhost,1436;Database=FPTShop;User=sa;Password=Password@123;TrustServerCertificate=True;MultipleActiveResultSets=True"
   },
   "Logging": {
     "LogLevel": {
