--- a/ApplicationDev/ApplicationDev.csproj
+++ b/ApplicationDev/ApplicationDev.csproj
@@ -41,4 +41,12 @@
       <_ContentIncludedByDefault Remove="Views\Store\Index.cshtml" />
     </ItemGroup>
 
+    <ItemGroup>
+      <UpToDateCheckInput Remove="Views\Stores\Create.cshtml" />
+      <UpToDateCheckInput Remove="Views\Stores\Delete.cshtml" />
+      <UpToDateCheckInput Remove="Views\Stores\Details.cshtml" />
+      <UpToDateCheckInput Remove="Views\Stores\Edit.cshtml" />
+      <UpToDateCheckInput Remove="Views\Stores\Index.cshtml" />
+    </ItemGroup>
+
 </Project>
