--- a/ApplicationDev/ApplicationDev.csproj
+++ b/ApplicationDev/ApplicationDev.csproj
@@ -13,6 +13,7 @@
     </ItemGroup>
 
     <ItemGroup>
+        <PackageReference Include="AspNetCoreHero.ToastNotification" Version="1.1.0" />
         <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="6.0.0" />
         <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.3" />
         <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="6.0.3" />
@@ -43,6 +44,11 @@
     </ItemGroup>
 
     <ItemGroup>
+      <UpToDateCheckInput Remove="Views\Stores\Create.cshtml" />
+      <UpToDateCheckInput Remove="Views\Stores\Delete.cshtml" />
+      <UpToDateCheckInput Remove="Views\Stores\Details.cshtml" />
+      <UpToDateCheckInput Remove="Views\Stores\Edit.cshtml" />
+      <UpToDateCheckInput Remove="Views\Stores\Index.cshtml" />
       <UpToDateCheckInput Remove="Views\Stores\Create.cshtml" />
       <UpToDateCheckInput Remove="Views\Stores\Delete.cshtml" />
       <UpToDateCheckInput Remove="Views\Stores\Details.cshtml" />
