--- a/ApplicationDev/ApplicationDev.csproj
+++ b/ApplicationDev/ApplicationDev.csproj
@@ -32,6 +32,7 @@
         </PackageReference>
         <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Core" Version="7.0.0-preview.1.22116.2" />
         <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.2" />
+        <PackageReference Include="NETCore.MailKit" Version="2.0.3" />
         <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     </ItemGroup>
 
