Update Docker file

--- a/ApplicationDev/Dockerfile
+++ b/ApplicationDev/Dockerfile
@@ -5,15 +5,13 @@ EXPOSE 443
 
 FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
 WORKDIR /src
-COPY ["ApplicationDev/ApplicationDev.csproj", "ApplicationDev/"]
-RUN dotnet restore "ApplicationDev/ApplicationDev.csproj"
+COPY ["./ApplicationDev.csproj", "src/"]
+RUN dotnet restore "src/ApplicationDev.csproj"
 COPY . .
-WORKDIR "/src/ApplicationDev"
+WORKDIR "/src/"
 RUN dotnet build "ApplicationDev.csproj" -c Release -o /app/build
-
 FROM build AS publish
 RUN dotnet publish "ApplicationDev.csproj" -c Release -o /app/publish
-
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
