--- a/.gitignore
+++ b/.gitignore
@@ -271,6 +271,19 @@ __pycache__/
 # Cake - Uncomment if you are using it
 # tools/
 
+# Node build artifacts
+node_modules
+npm-debug.log
+
+# Local development
+*.env
+*.dev
+.DS_Store
+
+# Docker
+Dockerfile
+docker-compose.yml
+
 # End of https://www.toptal.com/developers/gitignore/api/aspnetcore
 ELibrary_Team 1/appsettings.json
 ELibrary_Team 1/appsettings.json
