--- a/ApplicationDev/Dockerfile
+++ b/ApplicationDev/Dockerfile
@@ -16,4 +16,4 @@ FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
 ENTRYPOINT ["dotnet", "ApplicationDev.dll"]
-CMD ASPNETCORE_URLS=http://*:$PORT dotnet HerokuApp.dll
+CMD ["dotnet", "ApplicationDev.dll"]
